# plex

./: Cargo.toml  Dockerfile  README.md  build.rs  compose.yml
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  promote-stage.yml  release.yml  rust.yml  sync.yml
docs/: deploy-lxc.md
examples/: docker-compose.basic.yml  docker-compose.dockge.yml  docker-compose.nvidia.yml  docker-compose.older-intel.yml  docker-compose.tmpfs-transcode.yml
lxc/: plex.conf.example  provision.sh
scripts/: backup.sh  configure.sh  entrypoint.sh  install.sh  restore.sh
specs/: plex.openapi.json
src/: abi_export.rs  diag.rs  lib.rs  lifecycle.rs  tools.rs
