[package]
name = "plex"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "plex"
path = "src/lib.rs"
# `cdylib` is the orca plugin artifact orca's `plugin-loader` `dlopen`s;
# `rlib` retains the in-crate `#[cfg(test)]` harness + lets the workspace use it
# as a normal Rust lib.
crate-type = ["cdylib", "rlib"]

# Plex media-server plugin. Typed client codegenned by progenitor from the
# vendored upstream spec (`specs/plex.openapi.json`, OpenAPI 3.1.1, MIT). The
# vendored document is 3.1, so `build.rs` rides the toolkit's 3.1→3.0 lowering
# pass before pruning it to the handful of paths this plugin drives (`/`,
# `/identity`, `/library/sections/all`, `/status/sessions`) plus their
# transitive schema closure before codegen — see
# `plugin_toolkit_build::openapi::generate_selected`.
#
# Update the spec by overwriting `specs/plex.openapi.json`.

[dependencies]
# The SOLE orca dependency. All macro-emitted paths (`#[orca_tool]`,
# `endpoint_resource!`, dispatch's `register_op!`) resolve through
# `::plugin_toolkit::*`, and every orca primitive the plugin source touches
# (serde / schemars / clap / anyhow / thiserror / inventory / db / rusqlite /
# async-trait / dispatch / contract / derive / macro-runtime / http /
# notifications / tokio) is re-exported by the toolkit + its prelude.
#
# Pinned to the orca rc tag that carries the slice-1 plugin-toolkit surface.
# The committed `[patch]` in `.cargo/config.toml` overrides this to the local
# in-tree toolkit for development; the git tag is what an external checkout
# without the orca repo resolves against.
plugin-toolkit = { git = "https://github.com/argyle-labs/orca", tag = "v0.0.8-rc.7" }

# Genuinely-external, non-orca runtime deps emitted by progenitor's generated
# client (`src/api`). progenitor hard-codes these crate paths in its output, so
# they cannot route through the toolkit — they are the plugin's own transitive
# deps, exactly as a third-party plugin would carry.
#
# serde + serde_json + thiserror: progenitor's generated code and thiserror v2's
# derive emit bare `::serde` / `::serde_json` / `::thiserror` crate-root paths
# that no `crate = ...` attribute can redirect. These three are the codegen +
# error-derive runtime — the plugin's own deps, exactly like a third-party
# progenitor plugin.
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"

# The `#[export_root_module]` macro (re-exported by the toolkit) expands to bare
# `::abi_stable` paths in this crate's root, so abi_stable must be a direct dep.
# Pinned to the orca workspace version (0.11) so the layout hash baked into the
# cdylib matches what orca's plugin-loader checks at load time.
abi_stable = "0.11"

progenitor-client = "0.14"
futures-core = "0.3"
bytes       = "1"
regress     = "0.10"
# Must match the orca workspace pin (0.13) so progenitor's generated client and
# the toolkit's http layer share one reqwest version — a mismatch produces
# incompatible `reqwest::Client`/`Request` types across the api boundary.
reqwest     = { version = "0.13", default-features = false, features = ["json", "stream", "rustls-no-provider"] }
# progenitor emits `::chrono` / `::uuid` paths for date-time + uuid formats.
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tokio    = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
tempfile = "3"

[build-dependencies]
plugin-toolkit-build = { git = "https://github.com/argyle-labs/orca", tag = "v0.0.8-rc.7" }

# Match orca's workspace lint floor: discarding a Result/Option via
# `let _ = ...` was a load-bearing past incident, so keep it a hard error here
# too — the plugin must stay portable back into the orca workspace.
[lints.clippy]
let_underscore_must_use = "deny"
